spacing fix

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -372,7 +372,7 @@ header nav .nav-tools .nav-search .icon svg {
 .top-header__inner {
     max-width: 1408px;
     margin: auto;
-    padding: 0 1.5rem;
+    padding: 0 1rem;
 }
 
 .top-header__top {
